--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "moment": "^2.24.0"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
