--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
+    "express-validator": "^6.4.0",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "sqlite3": "^4.2.0"
